      (Should be extensible to other languages.)
      Mark K. Kim <mkkim214@gmail.com>

    * Stamps now supports SVG vector-based graphics!  (Via Cairo library)
      (Only SVG versions of stamps are loaded, when both PNG and SVG
      variations are found.)

      (Experimental; build with "make nosvg" to disable SVG support and
      Cairo dependency.)

    * Bilinear interpolation (smoothing) is done to small bitmap (PNG)
      stamps when they are scaled up.
      (Based on example code by Christian Graus:
      http://www.codeproject.com/cs/media/imageprocessing4.asp )

    * New brushes:
      Caroline Ford <caroline.ford.work@googlemail.com>
      + Blob
      + Chisle
      + Cut-out square in diamond
      + Cut-out star in circle
      + Diamond
      + Five-petal flower (large and small)
      + Six-petal flower (large and small)
      + Heart
      + Hexagon
      + Lozenge
      + Oval
      + Pentagon
      + Spiral
      + Splat
      + Star
      + Triangle (up and down)


  * Documentation Improvements:
    ---------------------------
    * Discussed SVG Stamps in "Extending Tux Paint."

    * Created an "SVG.txt" document, covering SVG software.
      FIXME: Not done yet?

    * Mentioned descriptive sounds (e.g., "stamp_desc_ll.ogg") in "Extending..."

    * Listing new www.tuxpaint.org website URL.

    * Expanded MinGW/MSYS GCC compilation instructions for building Win32.

    * Example tuxpaint.conf has been updated to include newer options.

    * Briefly documented translation (gettext PO catalogs) in "Extending..."

    * Briefly documented alternative input methods (IM character map files)
      in "Extending..."
    
  * Bug Fixes:
    ----------
    * Tux the Penguin sound effects were not working; fixed.

    * No longer disabling screensaver (if the system's libSDL supports
      it via "SDL_ALLOWSCREENSAVER" environment variable).

    * "use_print_config" option defaults to 'yes' on Windows, again.